--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=backend
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306
+spring.datasource.url=jdbc:mysql://localhost:3306/towerbase
+spring.datasource.username=root
+spring.datasource.password=masterkey
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
